# aiogram-nats

./: Dockerfile  LICENSE  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_push.yml  lint.yml
aiogram_nats/: __main__.py
aiogram_nats/api/: factory.py
aiogram_nats/api/middlewares/: __init__.py  log.py
aiogram_nats/common/log/: configuration.py  installer.py
aiogram_nats/common/log/processors/: detailed.py
aiogram_nats/common/settings/: __init__.py  dynaconf_config.py  settings_model.py
aiogram_nats/common/settings/models/: __init__.py  broker.py  db.py  logs.py  mailing_service.py  rdb.py  security.py  telegram.py
aiogram_nats/core/entities/: mailing.py  message.py  scheduled.py  user.py
aiogram_nats/core/interactors/mailing/: __init__.py  create_mailing.py  delete_mailing.py  start_mailing.py
aiogram_nats/core/interactors/messages/: __init__.py  deletion_scheduled.py  scheduled.py  send_scheduled.py
aiogram_nats/core/interfaces/interfaces/: mailing.py  message.py  message_remover.py  message_sender.py  scheduler.py  user.py
aiogram_nats/core/services/: user.py
aiogram_nats/infrastructure/clients/mailing_service/: __init__.py  client.py
aiogram_nats/infrastructure/database/mappers/: rdb.py
aiogram_nats/infrastructure/database/rdb/: factory.py  holder.py  tm.py
aiogram_nats/infrastructure/di/: __init__.py  broker.py  clients.py  database.py  interactors.py  logs.py  settings.py  taskiq_provider.py
aiogram_nats/infrastructure/scheduler/: factory.py  impl.py  override.py  taskiq_constants.py
aiogram_nats/stubs/fluent_compiler/: bundle.pyi
aiogram_nats/stubs/fluentogram/: __init__.pyi
aiogram_nats/stubs/fluentogram/src/: abc.pyi
aiogram_nats/tgbot/: setup.py  tasks.py
aiogram_nats/tgbot/di/: bot.py  factory.py  i18n.py
aiogram_nats/tgbot/dialogs/: __init__.py
aiogram_nats/tgbot/dialogs/routers/: __init__.py
aiogram_nats/tgbot/dialogs/states/: menu.py
aiogram_nats/tgbot/handlers/: __init__.py  commands.py  errors.py
aiogram_nats/tgbot/i18n/: enums.py  factory.py
aiogram_nats/tgbot/mailing/: manager.py
aiogram_nats/tgbot/middlewares/: __init__.py  i18n.py  init.py  interactors.py  logs.py
aiogram_nats/tgbot/utils/: data.py
migrations/db/: env.py
migrations/db/versions/: 2024_09_16_2147-102ddfadd1b5_first_migration.py
scripts/: lint.sh
(+14 files in other folders)
