[tool.poetry]
name = "aiogram-nats"
version = "0.1.0"
description = ""
authors = ["NezBut <aleksejstacaenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
aiogram-dialog = "^2.1.0"
dishka = "^1.2.0"
structlog = "^24.4.0"
nats-py = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
